modify index.html and add README

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </ul>
       </header>
       <section>
-        <p>LNG</p>
+        <p><a href="https://github.com/umika/LNG/blob/master/case00.png?raw=true"><img src="https://github.com/umika/LNG/blob/master/case00.png?raw=true" border="0"></a></p>
+        <p><a href="https://github.com/umika/LNG/">https://github.com/umika/LNG/ (github repository)</a></p>
+        <p><a href="http://umika.github.com/LNG/">http://umika.github.com/LNG/ (here)</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/umika">umika</a></p>
@@ -36,6 +38,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
